# prlog

./: Cargo.toml  LICENSE  README.md  log.txt
prlog/: Cargo.toml  README.md
prlog-cli/: Cargo.toml  README.md
prlog-cli/src/: main.rs
prlog/examples/: simple_log.rs
prlog/src/: core.rs  entry.rs  formatter.rs  lib.rs  writer.rs
