[package]
name = "prlog-cli"
version = "0.1.0"
edition = "2024"
authors = ["Evgen <evgenru22@urk.net>"]
description = "CLI tool to view and filter prlog files."
repository = "https://github.com/evgenrudenko22/prlog"
license = "MIT"
readme = "README.md"
keywords = ["logger", "cli", "viewer", "json", "log-viewer"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
prlog = { path = "../prlog" }

clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[[bin]]
name = "prlog-cli"
path = "src/main.rs"