[package]
name = "prlog"
version = "0.1.0"
edition = "2024"
authors = ["Evgen <evgenru22@urk.net>"]
description = "A logger that writes to console and a structured file."
license = "MIT"

[features]
default = ["colors", "file-log"]
colors = ["dep:colored"]
file-log = []

[dependencies]
log = { version = "0.4.29", features = ["std"] }
chrono = "0.4.44"

colored = { version = "3.1.1", optional = true }